tests/negative/parallel_for_huge_span.far
fun main() {
  parallel for i in 0..16777217 { }
  return 0
}
